--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import "reset.min.css";
 
 html { 
-  	background: url(../img/background.jpg) no-repeat center center fixed; 
+  	background: url(../img/background2.jpg) no-repeat center center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
